2025-05-13  Zhengyi Fu  <i@fuzy.me>

	Prefer `visual-fill-column-mode' over `olivetti-mode' and
	`visual-line-fill-column-mode'

	* init.el (+visual-fill-column/toggle-visual-fill-and-center): Use
	`visual-fill-column-mode' instead of `visual-line-fill-column-mode'.
	(org-mode-map): Remove local keybinding for `olivetti-mode'.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	* init.el <consult>: Bind M-s D to `consult-fd', M-s R to `consult-ugrep'.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	* init.el (auto-mode-alist): Use `makefile-mode' to visit qmake
	files.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	Remove doom-modeline

	* packages.el (blackout): Add package.
	(doom-modeline): Remove package.

	* init.el: Remove configuration for `doom-modeline'.
	Remove some minor mode lighters using `blackout'.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	* init.el (add-change-log-entry): Temporarily bind
	`add-log-always-start-new-record' to t if WHOMAI is non-nil.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/consult-ugrep.el (consult-ugrep-args): Add
	--ignore-files to standard value of `consult-ugrep-args'.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	Remove password-store

	* obsoletes.el: New file for removed parts.

	* packages.el (pass): Remove package.

	* init.el (eat-send-pass): Remove function.
	(password-store): Remove package configuration.

2025-05-12  Zhengyi Fu  <i@fuzy.me>

	* templates/cc-mode.eld: Add new snippet `pheader'.

2025-05-12  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (confirm-kill-emacs): Do not require confirmation
	on exit.

2025-05-12  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/cmake-capf.el (cmake-capf--candidates): Use
	`with-temp-buffer' instead of `with-work-buffer'.

2025-05-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (auto-mode-alist): Fix entry for `c++-mode'.

2025-05-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (tool-map): Bind "R" to `tui-recentf' and "G" to
	`tui-git-ls-files'.

2025-05-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (udev-rules-mode): New command.
